updated test with flipping images

--- a/indextest.html
+++ b/indextest.html
@@ -502,8 +502,8 @@
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Post Title</h3>
-                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                            <h3 class="text-white fs-5">Clare Ivory</h3>
+                            <p class="fs-6 text-white">Chairwoman</p>
                         </div>
                     </div>
                 </div>
@@ -511,12 +511,12 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/Clare.jpg" alt="">
+                        <img src="assets/img/team/Gemma.jpg" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Post Title</h3>
-                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                            <h3 class="text-white fs-5">Gemma Turner</h3>
+                            <p class="fs-6 text-white">Vice Chair</p>
                         </div>
                     </div>
                 </div>
@@ -524,157 +524,136 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/Clare.jpg" alt="">
+                        <img src="assets/img/team/Anne.JPG" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Post Title</h3>
-                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                            <h3 class="text-white fs-5">Anne Coppard</h3>
+                            <p class="fs-6 text-white">Secretary</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Austin.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Austin Stephens</h3>
+                            <p class="fs-6 text-white">Resident Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/AmyR.JPG" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Amy Rogers</h3>
+                            <p class="fs-6 text-white">Choregraphy Director, Fundraising and Social Events</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/josef.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Josef Harle</h3>
+                            <p class="fs-6 text-white">Technical Sound and Music Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Andy.JPG" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Andy Patterson</h3>
+                            <p class="fs-6 text-white">Technical Light Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Sadie.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Sadie Stephens</h3>
+                            <p class="fs-6 text-white">Marketing/Media Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Sue.JPG" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Sue Granger</h3>
+                            <p class="fs-6 text-white">Costume Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Dave.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Dave Sherbourne</h3>
+                            <p class="fs-6 text-white">Treasurer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Amy.jpeg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Amy Payne</h3>
+                            <p class="fs-6 text-white">Backstage Director</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Joe.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Joe Mitchell</h3>
+                            <p class="fs-6 text-white">Show Budgets Director</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Clare.jpg" class="img-fluid" alt="">
-                <!-- <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-              <div class="member-info">
-                <h4>Clare Ivory</h4>
-                <span>Chairwoman</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/Gemma.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Gemma Turner</h4>
-                <span>Vice Chair</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Anne Coppard</h4>
-                <span>Secretary</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/Austin.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Austin Stephens</h4>
-                <span>Resident Director</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="assets/img/team/AmyR.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Amy Rogers</h4>
-                <span>Choregraphy Director, Fundraising and Social Events</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/josef.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Josef Harle</h4>
-                <span>Technical Sound and Music Director</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Andy.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Andy Patterson</h4>
-                <span>Technical Light Director</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Sadie.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Sadie Stephens</h4>
-                <span>Marketing/Media Director</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Sue.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Sue Granger</h4>
-                <span>Costume Director</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Dave.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Dave Sherborne</h4>
-                <span>Treasurer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Amy.jpeg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Sadie Potts/Amy Payne</h4>
-                <span>Backstage Directors</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+          <!-- <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <img src="assets/img/team/Joe.jpg" class="img-fluid" alt="">
@@ -684,7 +663,7 @@
                 <span>Show Budgets Director</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
         </div>
