CATCF tickets link

--- a/index.html
+++ b/index.html
@@ -676,9 +676,10 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Coming Up!</h2>
+          <h2>Tickets Now on Sale!</h2>
           <p>Charlie and the Chocolate Factory - June 2024</p>
           <p>Children's show</p>
+          <p>Click the poster to buy your tickets</p>
         </div>
         
         <div class="row">
@@ -687,7 +688,7 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <!-- <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer"> -->
+                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
                   <img src="assets/img/CATCF.JPG" class="img-fluid" alt="">
                 </a>
               </div>
