--- a/index.html
+++ b/index.html
@@ -677,8 +677,7 @@
 
         <div class="section-title">
           <h2>Tickets Now on Sale!</h2>
-          <p>Charlie and the Chocolate Factory - June 2024</p>
-          <p>Children's show</p>
+          <p>Charlie and the Chocolate Factory Youth Production</p>
           <p>Click the poster to buy your tickets</p>
         </div>
         
