cast for snow white

--- a/SnowWhite.html
+++ b/SnowWhite.html
@@ -99,7 +99,7 @@
           <h2>SnowWhite Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>SnowWhite Details (Coming Soon)</li>
+            <li>SnowWhite Details</li>
           </ol>
         </div>
 
@@ -192,7 +192,39 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>The cast and the story (coming soon)</h2>
+              <h2>The cast and the story</h2>
+              <p>Story coming soon</p>
+              <p>The Cast:</p>
+              <ul>
+                <li><b>Snow White:</b> Jaime Bach</li> 
+                <li><b>Andy:</b> James Cradock</li> 
+                <li><b>Cookie:</b> Joe Mitchell</li> 
+                <li><b>Evil Queen:</b> Sadie Potts</li> 
+                <li><b>Snivel:</b> Rachel Coha</li> 
+                <li><b>Jolly:</b> Sadie Stephens</li> 
+                <li><b>Snobby:</b> Sue Granger</li> 
+                <li><b>Crabby:</b> Kat Brimble</li>
+                <li><b>Pappy:</b> Martin Nosworthy</li>
+                <li><b>Techie:</b> Lucas Mitchell</li>
+                <li><b>Drowsy:</b> Orlaith Mitchell</li> 
+                <li><b>Snotty:</b> Calley Potts</li> 
+                <li><b>King:</b> Clare Ivory</li> 
+                <li><b>Mirror:</b> John Turner</li>
+                <li><b>Snow Whites 3 bestfriends:</b> Maia Rogers, Ruby Burt, Cadence Nosworthy</li>
+                <li><b>Andy's Gym Mates:</b> Allegra Nosworthy, Kiera Mitchell</li>
+                <li><b>Chorus:</b>Reenie Brimble, Shoshoni Walker, Hania Walker, 
+                Poppy Morris, Grace Coles, Meghan Catley, 
+                Tiah Banjar, Lilou Cornish, Jessie Hutchinson, 
+                Ava Morris, Esme Matthews, Harmony Nosworthy, 
+                Maddie Coles, Devon Ferris, Olivia Mitchell, 
+                Oscar Mitchell, Avalon Backinsell, Radella Backinsell, 
+                Eloise Coha, Elsie Stephens, Tyler Bridges-Andres, Jack Cantilion</li>
+              </ul>
+              <ul>
+                <li><b>Directors/Producers:</b> Clare Ivory, Sadie Potts, Sadie Stephens, Amy Payne</li>
+                <li><b>Technical:</b> Andy Patterson, Josef Harle, Anthony Brimble</li>
+              </ul>
+
             </div>
           </div>
 
