--- a/SnowWhite.html
+++ b/SnowWhite.html
@@ -194,7 +194,7 @@
             <div class="portfolio-description">
               <h2>The cast and the story</h2>
               <p>In a reimagined version of "Snow White," the young princess Snow White is known for her unparalleled beauty, which angers her vain stepmother, the Queen. The Queen orders Snow White's best friend, Andy, to kill her out of jealousy. However, Andy, unable to harm his dear friend, warns Snow White and lets her escape into the forest.</p>
-              <p>Snow White falls into a deep, death-like sleep. The heartbroken dwarves place her in a glass coffin, believing she is lost to them forever. Time passes, and a prince discovers Snow White in her glass coffin. Moved by her beauty and the dwarves' love for her, he kisses her, breaking the spell and awakening her.</p>
+              <p>After eating a poisoned apple, Snow White falls into a deep, death-like sleep. The heartbroken dwarves place her in a glass coffin, believing she is lost to them forever. Time passes, and Andy discovers Snow White in her glass coffin. Moved by her beauty and the dwarves' love for her, he kisses her, breaking the spell and awakening her.</p>
               <p>The Cast:</p>
               <ul>
                 <li><b>Snow White:</b> Jaime Bach</li> 
