--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
                         <div>
                             <h3 class="text-white fs-5">Amy Rogers</h3>
                             <p class="fs-6 text-white">Choregraphy Director, Fundraising and Social Events</p>
+                            <p>I started PADS by joining the youth shows as a kid and have participated in many productions, starring as narrators to princesses to principle boy roles.</p> 
                         </div>
                     </div>
                 </div>
