--- a/index.html
+++ b/index.html
@@ -714,7 +714,8 @@
 
         <div>
           <!-- <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe> -->
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2494.4555113414062!2d-2.4988126839597675!3d51.30274337960205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487227e8ee79439d%3A0x6d27f3761ce7961!2sPaulton%20Rovers%20Football%20Club%20Ltd!5e0!3m2!1ses!2suk!4v1664736856821!5m2!1ses!2suk" frameborder="0" allowfullscreen></iframe>
+          <!-- <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2494.4555113414062!2d-2.4988126839597675!3d51.30274337960205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487227e8ee79439d%3A0x6d27f3761ce7961!2sPaulton%20Rovers%20Football%20Club%20Ltd!5e0!3m2!1ses!2suk!4v1664736856821!5m2!1ses!2suk" frameborder="0" allowfullscreen></iframe> -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2494.1881632321374!2d-2.5050558230445117!3d51.30766242527474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487227ee78b8aac9%3A0xd6766d27ab8992b8!2sThe%20Red%20Lion!5e0!3m2!1sen!2suk!4v1718358785931!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <div class="row mt-5">
@@ -724,13 +725,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Paulton Rovers Football Club</p>
+                <p>The Red Lion</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>paultonamateurdramatics@gmail.com</p>
+                <p>paultonpads@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -787,8 +788,8 @@
             <div class="footer-info">
               <h3>PADS<span>.</span></h3>
               <p>
-                Paulton Rovers Football Club <br>
-                <strong>Email:</strong> paultonamateurdramatics@gmail.com<br>
+                The Red Lion <br>
+                <strong>Email:</strong> paultonpads@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
