--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@
                         <div>
                             <h3 class="text-white fs-5">Amy Payne</h3>
                             <p class="fs-6 text-white">Backstage Director</p>
+                            <p>I found PADs back in Autumn 2021. I am now one of the backstage directors and ensure the stage and backstage areas are good to go for the shows.</p>
                         </div>
                     </div>
                 </div>
