--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/CATCF.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Willy Wonka</h4>
+                <div class="portfolio-links">
+                  <a href="Charlie-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/ticketsSW.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>SnowWhite</h4>
@@ -678,9 +690,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Tickets Now on Sale!</h2>
-          <p>Charlie and the Chocolate Factory Youth Production</p>
-          <p>Click the poster to buy your tickets</p>
+          <h2>Tickets On Sale Soon!</h2>
+          <p>The Good Life</p>
         </div>
         
         <div class="row">
@@ -690,7 +701,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/CATCF.JPG" class="img-fluid" alt="">
+                  <img src="assets/img/GoodLife.png" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
