--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Tickets On Sale Soon!</h2>
-          <p>The Good Life</p>
+          <h2>Auditions for Panto!</h2>
+          <p>Beauty and The Beast</p>
         </div>
         
         <div class="row">
@@ -700,8 +700,8 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/GoodLife.png" class="img-fluid" alt="">
+                <a href="https://forms.gle/X2s5uRHUPuQFSkd49" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/img/BeautyAndTheBeast.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
