Added the beast and updated members

--- a/index.html
+++ b/index.html
@@ -536,12 +536,13 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/Anne.JPG" alt="">
+                        <img src="assets/img/team/JamesC.jpg" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Anne Coppard</h3>
-                            <p class="fs-6 text-white">Secretary</p>
+                            <h3 class="text-white fs-5">James Cradock</h3>
+                            <p class="fs-6 text-white">Events Organiser</p>
+                            <p>I joined PADs in 2021 for an open Murder Mystery script read-through and enjoyed it so much I decided to stay.</p>
                         </div>
                     </div>
                 </div>
@@ -625,7 +626,7 @@
                     </div>
                 </div>
             </div>
-            <div class="box">
+            <!-- <div class="box">
                 <div class="body">
                     <div class="imgContainer">
                         <img src="assets/img/team/Dave.jpg" alt="">
@@ -637,7 +638,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
@@ -690,7 +691,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Auditions for Panto!</h2>
+          <h2>Tickets now available!</h2>
           <p>Beauty and The Beast</p>
         </div>
         
@@ -700,7 +701,7 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <a href="https://forms.gle/X2s5uRHUPuQFSkd49" target="_blank" rel="noopener noreferrer">
+                <a href="https://ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
                   <img src="assets/img/BeautyAndTheBeast.jpg" class="img-fluid" alt="">
                 </a>
               </div>
