--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
                         <div>
                             <h3 class="text-white fs-5">Joe Mitchell</h3>
                             <p class="fs-6 text-white">Show Budgets Director</p>
+                            <p>I joined PADs in 2022 for Cinderella, after being dared to audition by my partner and kids. I must have done alright as they have kept me around since!</p>
                         </div>
                     </div>
                 </div>
