--- a/index.html
+++ b/index.html
@@ -595,7 +595,8 @@
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
                             <h3 class="text-white fs-5">Andy Patterson</h3>
-                            <p class="fs-6 text-white">Technical Light Director</p>
+                            <p class="fs-6 text-white">Technical Light Director / Secretary</p>
+                            <p>Having been involved with a number of Amateur Dramatics groups acting, writing and technical I joined PADS having moved to Somerset in 2019.</p>
                         </div>
                     </div>
                 </div>
