--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/BB.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Beauty and the Beast</h4>
+                <div class="portfolio-links">
+                  <a href="BB-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/CATCF.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Willy Wonka</h4>
@@ -693,14 +705,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Tickets now available!</h2>
-          <p>Beauty and The Beast</p>
+          <h2>Next Show!</h2>
+          <p>Youth Production: To Be Announced</p>
         </div>
         
         <div class="row">
 
           <!-- <div class="col-lg-4 col-md-5 d-flex align-items-stretch justify-content-center"> -->
-          <div class="col-lg-4 col-md-5 justify-content-center">
+          <!-- <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <a href="https://ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
