--- a/index.html
+++ b/index.html
@@ -706,23 +706,23 @@
 
         <div class="section-title">
           <h2>Next Show!</h2>
-          <p>Youth Production: To Be Announced</p>
+          <p>Youth Production: Fantastic Mr Fox</p>
         </div>
         
         <div class="row">
 
-          <!-- <div class="col-lg-4 col-md-5 d-flex align-items-stretch justify-content-center"> -->
-          <!-- <div class="col-lg-4 col-md-5 justify-content-center">
+          <div class="col-lg-4 col-md-5 d-flex align-items-stretch justify-content-center">
+          <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <a href="https://ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/BeautyAndTheBeast.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Fox.jpg" class="img-fluid" alt="">
                 </a>
               </div>
-              <div class="member-info">
-                <!-- <h4>Oliver!, Sound of Music and Mary Poppins</h4>
-                <span><p>Our next show will be held at Paulton Rovers and will be a musical based project. Containing songs from your favourite musicals</p></span> -->
-              </div>
+              <!-- <div class="member-info">
+                <h4>Fantastic Mr. Fox</h4>
+                <span><p>Our next show will be held at Paulton Rovers and will be Fantastic Mr. Fox.</p></span>
+              </div> -->
             </div>
           </div>
         </div>
