--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                         <div>
                             <h3 class="text-white fs-5">Clare Ivory</h3>
                             <p class="fs-6 text-white">Chairwoman</p>
+                            <p>I joined PADs in 2012 when my daughter became part of the Youth Group. I now write the annual panto and work to bring regular shows to the community</p>
                         </div>
                     </div>
                 </div>
@@ -580,7 +581,7 @@
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
                             <h3 class="text-white fs-5">Amy Rogers</h3>
-                            <p class="fs-6 text-white">Choregraphy Director, Fundraising and Social Events</p>
+                            <p class="fs-6 text-white">Committee Member</p>
                             <p>I started PADS by joining the youth shows as a kid and have participated in many productions, starring as narrators to princesses to principle boy roles.</p> 
                         </div>
                     </div>
@@ -589,12 +590,12 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/josef.jpg" alt="">
+                        <img src="assets/img/team/Jaime.jpg" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Josef Harle</h3>
-                            <p class="fs-6 text-white">Technical Sound and Music Director</p>
+                            <h3 class="text-white fs-5">Jaime Bach</h3>
+                            <p class="fs-6 text-white">Fundraising and Social Events Director</p>
                         </div>
                     </div>
                 </div>
@@ -639,19 +640,19 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="box">
+            <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/Dave.jpg" alt="">
+                        <img src="assets/img/team/Generic.jpg" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-white fs-5">Dave Sherbourne</h3>
-                            <p class="fs-6 text-white">Treasurer</p>
+                            <h3 class="text-white fs-5">Sadie Potts</h3>
+                            <p class="fs-6 text-white">Scenery Director</p>
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
