--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/Generic.jpg" alt="">
+                        <img src="assets/img/team/SadieP.png" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
