Updates to team

--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
                         <div>
                             <h3 class="text-white fs-5">Austin Stephens</h3>
                             <p class="fs-6 text-white">Resident Director</p>
+                            <p>I have been part of the PADs family since 2017 with laughs, tears and a few dame costumes. I've never looked back! Directing is as much of a passion of mine as acting, so being able to balance both is a dream.</p>
                         </div>
                     </div>
                 </div>
@@ -576,7 +577,7 @@
             <div class="box">
                 <div class="body">
                     <div class="imgContainer">
-                        <img src="assets/img/team/AmyR.JPG" alt="">
+                        <img src="assets/img/team/Amy2.png" alt="">
                     </div>
                     <div class="content d-flex flex-column align-items-center justify-content-center">
                         <div>
@@ -623,6 +624,7 @@
                         <div>
                             <h3 class="text-white fs-5">Sadie Stephens</h3>
                             <p class="fs-6 text-white">Marketing/Media Director</p>
+                            <p>I started with PADs because my brother was very committed and as a single mum they were very inclusive towards me and my daughter. They gave me a lot of support and inspiration. I am the face behind the posters and banners!</p>
                         </div>
                     </div>
                 </div>
