--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@
                         <div>
                             <h3 class="text-white fs-5">Sadie Potts</h3>
                             <p class="fs-6 text-white">Scenery Director</p>
+                            <p>I joined PADs in 2022 to support my daughter. just one backstage gig and suddenly I was rolling up my sleeves on scenery and props. Now I am on the committee, having a blast behind the scenes with an amazing team who make the magic happen. Turns out, the best drama is building it together!</p>
                         </div>
                     </div>
                 </div>
